<resources>
    <string name="app_name">Final Project</string>
    <string name="button">BUTTON</string>
    <string name="title">I See</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="font">Font</string>
    <string name="font_size">Font Size</string>
    <string name="font_color">Font Color</string>
    <string name="background_color">Background</string>
    <string name="send_to_kakao">Kakao</string>
</resources>