<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:fontFamily="@font/nanumbrush"
        android:textColor="#000000"
        android:textSize="18pt"
        />

    <TextView
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/from"
        android:text="language"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/center"
        android:layout_toLeftOf="@+id/center"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:background="@drawable/edge"
        />
    <TextView
        android:id="@+id/lan_text"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/center"
        android:layout_toRightOf="@+id/center"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/font"
        android:text="@string/font"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_toLeftOf="@+id/center"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:background="@drawable/edge"
        />
    <Spinner
        android:id="@+id/font_spinner"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_toRightOf="@+id/center"
        android:gravity="center_vertical"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/font_size"
        android:text="@string/font_size"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:layout_toLeftOf="@+id/center"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:background="@drawable/edge"
        />
    <Spinner
        android:id="@+id/font_size_spinner"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:layout_toRightOf="@+id/center"
        android:gravity="center_vertical"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/font_color"
        android:text="@string/font_color"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="240dp"
        android:layout_toLeftOf="@+id/center"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:background="@drawable/edge"
        />
    <Spinner
        android:id="@+id/font_color_spinner"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="240dp"
        android:layout_toRightOf="@+id/center"
        android:gravity="center_vertical"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/background_color"
        android:text="@string/background_color"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="280dp"
        android:layout_toLeftOf="@+id/center"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:background="@drawable/edge"
        />
    <Spinner
        android:id="@+id/background_color_spinner"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="280dp"
        android:layout_toRightOf="@+id/center"
        android:gravity="center_vertical"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/btn_stt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button" />

    <EditText
        android:id="@+id/txtSystem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_stt_start"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center_horizontal|center_vertical"
        android:background="#808080"
        />

    <EditText
        android:id="@+id/txtInMsg"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_below="@id/txtSystem"
        android:gravity="center_horizontal|center_vertical"
        android:ems="10"
        android:inputType="textPersonName" />



</RelativeLayout>